--- a/ilustracion.html
+++ b/ilustracion.html
@@ -79,17 +79,15 @@
   </header>
 
   <!--ilustracion-->
-  <section id="galeria" class="panel__galeria">
+  <section id="galeria" class="panel__galeria galeria__ilustracion">
     <button class="btn__invisible"><img src="assets/img/ilustraciones/cronicas-del-estallido-1.png" alt="Cronicas del estallido" class="img__btn" data-toggle="modal" data-target="#elemento1"></button>
-    <button class="btn__invisible"><img src="assets/img/ilustracion2.png" alt="" class="img__btn" data-toggle="modal" data-target="#elemento2"></button>
-    <button class="btn__invisible"><img src="assets/img/ilustracion3.png" alt="" class="img__btn" data-toggle="modal" data-target="#elemento3"></button>
-    <button class="btn__invisible"><img src="assets/img/ilustraciones/butterflies-sd.jpg" alt="Mariposas" class="img__btn" data-toggle="modal" data-target="#elemento4"></button>
-    <button class="btn__invisible"><img src="assets/img/ilustracion5.png" alt="" class="img__btn" data-toggle="modal" data-target="#elemento5"></button>
-    <button class="btn__invisible"><img src="assets/img/ilustracion6.png" alt="" class="img__btn" data-toggle="modal" data-target="#elemento6"></button>
-    <button class="btn__invisible"><img src="assets/img/ilustracion7.png" alt="" class="img__btn" data-toggle="modal" data-target="#elemento7"></button>
-    <button class="btn__invisible"><img src="assets/img/ilustracion8.png" alt="" class="img__btn" data-toggle="modal" data-target="#elemento8"></button>
-    <button class="btn__invisible"><img src="assets/img/ilustracion9.png" alt="" class="img__btn" data-toggle="modal" data-target="#elemento9"></button>
-    <button class="btn__invisible"><img src="assets/img/ilustraciones/hoodie-character-design-sd.png" alt="Hoodie character design" class="img__btn" data-toggle="modal" data-target="#elemento10"></button>
+    <button class="btn__invisible"><img src="assets/img/ilustraciones/daily-slice1.png" alt="The Daily Slice" class="img__btn" data-toggle="modal" data-target="#elemento2"></button>
+    <button class="btn__invisible"><img src="assets/img/ilustraciones/alvea-personaje-galeria.png" alt="" class="img__btn" data-toggle="modal" data-target="#elemento3"></button>
+    <button class="btn__invisible"><img src="assets/img/ilustraciones/alvea-ui1.png" alt="Mariposas" class="img__btn" data-toggle="modal" data-target="#elemento4"></button>
+    <button class="btn__invisible"><img src="assets/img/ilustraciones/alvea-bg-galeria.png" alt="" class="img__btn" data-toggle="modal" data-target="#elemento5"></button>
+    <button class="btn__invisible"><img src="assets/img/ilustraciones/butterflies-sd.jpg" alt="" class="img__btn" data-toggle="modal" data-target="#elemento6"></button>
+    <button class="btn__invisible"><img src="assets/img/ilustraciones/hoodie-character-design-sd.png" alt="" class="img__btn" data-toggle="modal" data-target="#elemento7"></button>
+    <button class="btn__invisible"><img src="assets/img/ilustraciones/photo-study.png" alt="" class="img__btn" data-toggle="modal" data-target="#elemento8"></button>
   </section>   
 </div>
     <!--MODALES-->
@@ -105,17 +103,18 @@
               </button>
             </div>
             <div class="modal-body modal__body-ilustracion">
-              <div class="d-none d-md-block modal__imagen-informacion">
-                <h4 class="modales__titulo texto__dark">Titulo<br><span class="modales__subtitulo">Subtitulo-contexto</span></h4>
-                <h4 class="modales__subtitulo texto__dark">Cliente</h4>
+              <div class="modal__vertical">
+                <img class="d-block modal__vertical-elemento" src="assets/img/ilustraciones/cronicas-del-estallido-1.png" alt="Sociedad Chilena de Oftalmología reporta 230 personas con lesiones oculares">
+                <img class="d-block modal__vertical-elemento" src="assets/img/ilustraciones/cronicas-del-estallido-2.png" alt="Sociedad Chilena de Oftalmología reporta 230 personas con lesiones oculares">
+                <img class="d-block modal__vertical-elemento" src="assets/img/ilustraciones/cronicas-del-estallido-3.png" alt="Sociedad Chilena de Oftalmología reporta 230 personas con lesiones oculares">
+                <img class="d-block modal__vertical-elemento" src="assets/img/ilustraciones/cronicas-del-estallido-4.png" alt="Sociedad Chilena de Oftalmología reporta 230 personas con lesiones oculares">
+                <img class="d-block modal__vertical-elemento" src="assets/img/ilustraciones/cronicas-del-estallido-5.png" alt="Sociedad Chilena de Oftalmología reporta 230 personas con lesiones oculares">
+                <img class="d-block modal__vertical-elemento" src="assets/img/ilustraciones/cronicas-del-estallido-6.png" alt="Sociedad Chilena de Oftalmología reporta 230 personas con lesiones oculares">              
               </div>
-              <div class="modal__imagenes">
-                <img class="d-block h-100 modal__imagenes-elemento" src="assets/img/ilustraciones/FarynBLUE.png" alt="Sociedad Chilena de Oftalmología reporta 230 personas con lesiones oculares">
-                <img class="d-block h-100 modal__imagenes-elemento" src="assets/img/ilustraciones/cronicas-del-estallido-2.png" alt="Sociedad Chilena de Oftalmología reporta 230 personas con lesiones oculares">
-                <img class="d-block h-100 modal__imagenes-elemento" src="assets/img/ilustraciones/cronicas-del-estallido-3.png" alt="Sociedad Chilena de Oftalmología reporta 230 personas con lesiones oculares">
-                <img class="d-block h-100 modal__imagenes-elemento" src="assets/img/ilustraciones/cronicas-del-estallido-4.png" alt="Sociedad Chilena de Oftalmología reporta 230 personas con lesiones oculares">
-                <img class="d-block h-100 modal__imagenes-elemento" src="assets/img/ilustraciones/cronicas-del-estallido-5.png" alt="Sociedad Chilena de Oftalmología reporta 230 personas con lesiones oculares">
-                <img class="d-block h-100 modal__imagenes-elemento" src="assets/img/ilustraciones/cronicas-del-estallido-6.png" alt="Sociedad Chilena de Oftalmología reporta 230 personas con lesiones oculares">              
+              <div class="d-none d-lg-block modal__imagen-info">
+                <h3 class="modales__titulo texto__dark">Cronicas del Estallido</h3>
+                <h4 class="modales__subtitulo texto__dark">Ilustraciones para cartas de juego</h4>
+                <h4 class="modales__subtitulo texto__dark">Cliente: Fractal Juegos</h4>
               </div>
             </div>
           </div>
@@ -132,17 +131,19 @@
               </button>
             </div>
             <div class="modal-body modal__body-ilustracion">
-              <img class="d-block h-100 modal__imagen" src="assets/img/ilustracion2.png" alt="Cronicas-del-estallido-1">
-              <div class="d-none d-md-block modal__imagen-informacion">
-                <h4 class="modales__titulo texto__dark">Titulo<br><span class="modales__subtitulo">Subtitulo-contexto</span></h4>
-                <h4 class="modales__subtitulo texto__dark">Cliente</h4>
+              <div class="modal__vertical">
+                <img class="d-block modal__vertical-elemento" src="assets/img/ilustraciones/daily-slice1.png" alt="Sociedad Chilena de Oftalmología reporta 230 personas con lesiones oculares">
+                <img class="d-block modal__vertical-elemento" src="assets/img/ilustraciones/daily-slice2.png" alt="Sociedad Chilena de Oftalmología reporta 230 personas con lesiones oculares">                    
+              </div>
+              <div class="d-none d-lg-block modal__imagen-info">
+                <h3 class="modales__titulo texto__dark">The Daily Slice</h3>
+                <h4 class="modales__subtitulo texto__dark">Cliente: Encargo particular</h4>
               </div>
             </div>
           </div>
         </div>
       </div>
-
-      <!--elemento3-->
+      <!--elemento 3-->
       <div class="modal fade modal-fullscreen-xl" id="elemento3" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
           <div class="modal-content">
@@ -152,10 +153,18 @@
               </button>
             </div>
             <div class="modal-body modal__body-ilustracion">
-              <img class="d-block h-100 modal__imagen" src="assets/img/ilustracion3.png" alt="Cronicas-del-estallido-1">
-              <div class="d-none d-md-block modal__imagen-informacion">
-                <h4 class="modales__titulo texto__dark">Titulo<br><span class="modales__subtitulo">Subtitulo-contexto</span></h4>
-                <h4 class="modales__subtitulo texto__dark">Cliente</h4>
+              <div class="modal__vertical">
+                <img class="d-block modal__vertical-elemento" src="assets/img/ilustraciones/alvea-personaje1.png" alt="Alvea-personaje-concept-art">
+                <img class="d-block modal__vertical-elemento" src="assets/img/ilustraciones/alvea-personaje2.png" alt="Alvea-personaje-carta-de-referencia">
+                <img class="d-block modal__vertical-elemento" src="assets/img/ilustraciones/alvea-personaje3.png" alt="Alvea-personaje-referencia-objeto-1">
+                <img class="d-block modal__vertical-elemento" src="assets/img/ilustraciones/alvea-personaje4.png" alt="Alvea-personaje-referencia-objeto-2">
+                <img class="d-block modal__vertical-elemento" src="assets/img/ilustraciones/alvea-personaje5.png" alt="Alvea-personaje-sprites-ingame">
+       
+              </div>
+              <div class="d-none d-lg-block modal__imagen-info">
+                <h3 class="modales__titulo texto__dark">Alvea: La Leyenda de los Vientos</h3>
+                <h4 class="modales__subtitulo texto__dark">Diseño de personaje</h4>
+                <h4 class="modales__subtitulo texto__dark">Proyecto de titulación</h4>
               </div>
             </div>
           </div>
@@ -172,10 +181,21 @@
               </button>
             </div>
             <div class="modal-body modal__body-ilustracion">
-              <img class="d-block h-100 modal__imagen" src="assets/img/ilustraciones/butterflies-sd.jpg" alt="Mariposas">
-              <div class="d-none d-md-block modal__imagen-informacion">
-                <h4 class="modales__titulo texto__dark">Titulo<br><span class="modales__subtitulo">Subtitulo-contexto</span></h4>
-                <h4 class="modales__subtitulo texto__dark">Cliente</h4>
+              <div class="modal__vertical">
+                <img class="d-block modal__vertical-elemento" src="assets/img/ilustraciones/alvea-ui1.png" alt="Alvea-personaje-concept-art">
+                <img class="d-block modal__vertical-elemento" src="assets/img/ilustraciones/alvea-ui2.png" alt="Alvea-personaje-carta-de-referencia">
+                <img class="d-block modal__vertical-elemento" src="assets/img/ilustraciones/alvea-ui3.png" alt="Alvea-personaje-referencia-objeto-1">
+                <img class="d-block modal__vertical-elemento" src="assets/img/ilustraciones/alvea-ui4.png" alt="Alvea-personaje-referencia-objeto-2">
+                <img class="d-block modal__vertical-elemento" src="assets/img/ilustraciones/alvea-ui5.png" alt="Alvea-personaje-sprites-ingame">
+                <img class="d-block modal__vertical-elemento" src="assets/img/ilustraciones/alvea-ui6.png" alt="Alvea-personaje-sprites-ingame">
+                <img class="d-block modal__vertical-elemento" src="assets/img/ilustraciones/alvea-ui7.png" alt="Alvea-personaje-sprites-ingame">
+                <img class="d-block modal__vertical-elemento" src="assets/img/ilustraciones/alvea-ui8.png" alt="Alvea-personaje-sprites-ingame">
+       
+              </div>
+              <div class="d-none d-lg-block modal__imagen-info">
+                <h3 class="modales__titulo texto__dark">Alvea: La Leyenda de los Vientos</h3>
+                <h4 class="modales__subtitulo texto__dark">Diseño de interfaz</h4>
+                <h4 class="modales__subtitulo texto__dark">Proyecto de titulación</h4>
               </div>
             </div>
           </div>
@@ -192,10 +212,16 @@
               </button>
             </div>
             <div class="modal-body modal__body-ilustracion">
-              <img class="d-block h-100 modal__imagen" src="assets/img/ilustracion5.png" alt="Cronicas-del-estallido-1">
-              <div class="d-none d-md-block modal__imagen-informacion">
-                <h4 class="modales__titulo texto__dark">Titulo<br><span class="modales__subtitulo">Subtitulo-contexto</span></h4>
-                <h4 class="modales__subtitulo texto__dark">Cliente</h4>
+              <div class="modal__vertical">
+                <img class="d-block modal__vertical-elemento" src="assets/img/ilustraciones/alvea-bg1.png" alt="Alvea-personaje-concept-art">
+                <img class="d-block modal__vertical-elemento" src="assets/img/ilustraciones/alvea-bg2.png" alt="Alvea-personaje-concept-art">
+                <img class="d-block modal__vertical-elemento" src="assets/img/ilustraciones/alvea-bg3.png" alt="Alvea-personaje-concept-art">
+                <img class="d-block modal__vertical-elemento" src="assets/img/ilustraciones/alvea-bg1.png" alt="Alvea-personaje-concept-art">
+              </div>
+              <div class="d-none d-lg-block modal__imagen-info">
+                <h3 class="modales__titulo texto__dark">Alvea: La Leyenda de los Vientos</h3>
+                <h4 class="modales__subtitulo texto__dark">Diseño de fondo</h4>
+                <h4 class="modales__subtitulo texto__dark">Proyecto de titulación</h4>
               </div>
             </div>
           </div>
@@ -212,10 +238,13 @@
               </button>
             </div>
             <div class="modal-body modal__body-ilustracion">
-              <img class="d-block h-100 modal__imagen" src="assets/img/ilustracion6.png" alt="Cronicas-del-estallido-1">
-              <div class="d-none d-md-block modal__imagen-informacion">
-                <h4 class="modales__titulo texto__dark">Titulo<br><span class="modales__subtitulo">Subtitulo-contexto</span></h4>
-                <h4 class="modales__subtitulo texto__dark">Cliente</h4>
+              <div class="modal__vertical">
+                <img class="d-block modal__vertical-elemento" src="assets/img/ilustraciones/butterflies-sd.jpg" alt="butterflies">
+              </div>
+              <div class="d-none d-lg-block modal__imagen-info">
+                <h3 class="modales__titulo texto__dark">Mariposas</h3>
+                <h4 class="modales__subtitulo texto__dark">Ilustración</h4>
+                <h4 class="modales__subtitulo texto__dark">Proyecto personal</h4>
               </div>
             </div>
           </div>
@@ -232,10 +261,13 @@
               </button>
             </div>
             <div class="modal-body modal__body-ilustracion">
-              <img class="d-block h-100 modal__imagen" src="assets/img/ilustracion7.png" alt="Cronicas-del-estallido-1">
-              <div class="d-none d-md-block modal__imagen-informacion">
-                <h4 class="modales__titulo texto__dark">Titulo<br><span class="modales__subtitulo">Subtitulo-contexto</span></h4>
-                <h4 class="modales__subtitulo texto__dark">Cliente</h4>
+              <div class="modal__vertical">
+                <img class="d-block modal__vertical-elemento" src="assets/img/ilustraciones/hoodie-character-design-sd.png" alt="urban-streetwear">
+              </div>
+              <div class="d-none d-lg-block modal__imagen-info">
+                <h3 class="modales__titulo texto__dark">Urban Streetwear</h3>
+                <h4 class="modales__subtitulo texto__dark">Diseño de personaje</h4>
+                <h4 class="modales__subtitulo texto__dark">Proyecto personal</h4>
               </div>
             </div>
           </div>
@@ -252,49 +284,11 @@
               </button>
             </div>
             <div class="modal-body modal__body-ilustracion">
-              <img class="d-block h-100 modal__imagen" src="assets/img/ilustracion8.png" alt="Cronicas-del-estallido-1">
-              <div class="d-none d-md-block modal__imagen-informacion">
-                <h4 class="modales__titulo texto__dark">Titulo<br><span class="modales__subtitulo">Subtitulo-contexto</span></h4>
-                <h4 class="modales__subtitulo texto__dark">Cliente</h4>
+              <div class="modal__vertical">
+                <img class="d-block modal__vertical-elemento" src="assets/img/ilustraciones/photo-study.png" alt="urban-streetwear">
               </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <!--elemento 9-->
-      <div class="modal fade modal-fullscreen-xl" id="elemento9" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <button type="button" class="boton__header close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div class="modal-body modal__body-ilustracion">
-              <img class="d-block h-100 modal__imagen" src="assets/img/ilustracion9.png" alt="Cronicas-del-estallido-1">
-              <div class="d-none d-md-block modal__imagen-informacion">
-                <h4 class="modales__titulo texto__dark">Titulo<br><span class="modales__subtitulo">Subtitulo-contexto</span></h4>
-                <h4 class="modales__subtitulo texto__dark">Cliente</h4>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <!--elemento 10-->
-      <div class="modal fade modal-fullscreen-xl" id="elemento10" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <button type="button" class="boton__header close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div class="modal-body modal__body-ilustracion">
-              <img class="d-block h-100 modal__imagen" src="assets/img/ilustraciones/hoodie-character-design-sd.png" alt="Hoodie character design">
-              <div class="d-none d-md-block modal__imagen-informacion">
-                <h4 class="modales__titulo texto__dark">Urbanwear<br><span class="modales__subtitulo">diseño de personaje</span></h4>
+              <div class="d-none d-lg-block modal__imagen-info">
+                <h4 class="modales__subtitulo texto__dark">Estudio de pose</h4>
                 <h4 class="modales__subtitulo texto__dark">Proyecto personal</h4>
               </div>
             </div>
