--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -57,10 +57,10 @@
 
     <ul class="navegacion__contacto">
       <li class="navegacion__contacto-elemento">
-        <a class="navegacion__contacto-link" href="">Mail</a>
+        <a class="navegacion__contacto-link" href="mailto: info@thomasheimdesign.com">Mail</a>
       </li>
       <li class="navegacion__contacto-elemento">
-        <a class="navegacion__contacto-link" href="">LinkedIn</a>
+        <a class="navegacion__contacto-link" href="https://www.linkedin.com/in/thomasheimrojas/" target="_blank">LinkedIn</a>
       </li>
     </ul>
 
@@ -71,12 +71,12 @@
           <h1 class="col-md-4 col-lg-12 hero__texto-1 texto__dark">Un poco sobre mi</h1>
         </div>
         <div class="row">
-          <p class="col-md-5 hero__parrafo-1 texto__dark">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil magni est doloremque sequi dolores nam neque qui! Eum obcaecati corrupti nam, delectus facilis ab rem nostrum reprehenderit temporibus fugiat hic?</p>
+          <p class="col-md-5 hero__parrafo-1 texto__dark">Mi nombre es thomas heim, soy un diseñador e ilustrador de la universidad de valparaíso viviendo en viña del mar. Soy una persona a la que le gusta explorar y aprender nuevas tecnicas y habilidades, una flexibilidad que solo pude obtener en la disciplina del diseño.<br><br>Desde pequeño, siempre he tenido interés en la ilustración y en la expresión de mi creatividad, sin embargo el estudiar diseño me ayudó a enfocar y controlar esa creatividad hacia la creación de soluciones y a la expresión de mensajes y experiencias visuales.</p>
         </div>
         <div class="row">
           <!--ACUERDATE DE PONER TU PORTAFOLIO DE VERDAD ACA CUANDO LO TERMINES-->
           <div class="col-1 sobremi__boton">
-            <button class="boton__custom"><a href="assets/img/fotoportada.jpg" download>Descarga mi CV</a></button>
+            <button class="boton__custom"><a href="assets/Curriculum Thomas Heim 2020.pdf#page=1" target="_blank">Descarga mi CV</a></button>
           </div>
         </div>
       </div>
@@ -88,9 +88,8 @@
         <div class="row">
           <h2 class="col-md-4 col-lg-3 articulo__titulo sobremi__titulo-experiencia">¿En donde he metido mano antes?</h1>
           <div class="col-md-7 offset-md-1 experiencia__contenido">
-            <h3 class="experiencia__trabajo articulo__subtitulo-1"><span class="experiencia__trabajo-titulo">Nombre Trabajo</span> // <span class="experiencia__trabajo-rol">diseñador xx</span> <br>// <span class="experiencia__trabajo-duracion">2015-2016</span></h3>
-            <h3 class="experiencia__trabajo articulo__subtitulo-1"><span class="experiencia__trabajo-titulo">Nombre Trabajo</span> // <span class="experiencia__trabajo-rol">diseñador xx</span> <br>// <span class="experiencia__trabajo-duracion">2015-2016</span></h3>
-            <h3 class="experiencia__trabajo articulo__subtitulo-1"><span class="experiencia__trabajo-titulo">Nombre Trabajo</span> // <span class="experiencia__trabajo-rol">diseñador xx</span> <br>// <span class="experiencia__trabajo-duracion">2015-2016</span></h3>
+            <h3 class="experiencia__trabajo articulo__subtitulo-1"><span class="experiencia__trabajo-titulo">Niebla Games</span> // <span class="experiencia__trabajo-rol">Diseñador gráfico - Game designer</span> <br>// <span class="experiencia__trabajo-duracion">2016</span></h3>
+            <h3 class="experiencia__trabajo articulo__subtitulo-1"><span class="experiencia__trabajo-titulo">IDK Games</span> // <span class="experiencia__trabajo-rol">Diseñador gráfico - Game designer - diseñador UI</span> <br>// <span class="experiencia__trabajo-duracion">2015</span></h3>
           </div>
         </div>
       </div>
@@ -100,19 +99,19 @@
     <section class="valores">
       <div class="container">
         <div class="row">
-          <h1 class="col-md-4 col-lg-3 articulo__titulo sobremi__titulo-experiencia texto__dark">¿Y cuales son mis valores?</h1>
+          <h1 class="col-md-4 col-lg-3 articulo__titulo sobremi__titulo-experiencia texto__dark">¿cuales son mis valores?</h1>
           <div class="col-md-7 offset-md-1 valores__contenido">
             <div class="valores__elemento">
-              <h3 class="articulo__subtitulo-1 texto__dark">// Nombre valor</h3>
-              <p class="articulo__parrafo-1 texto__dark">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, aliquam fugiat, quam et atque ea suscipit, eaque distinctio eveniet ab aut pariatur sit tenetur quidem consectetur beatae. Porro, beatae nam?</p>
+              <h3 class="articulo__subtitulo-1 texto__dark">// Inquisitivo, autodidacta</h3>
+              <p class="articulo__parrafo-1 texto__dark">Siempre estoy buscando nuevas habilidades o conocimientos que adquirir, y veo cada trabajo como una oportunidad para hacerlo. Si me encuentro con algo que no manejo o que me llame la atención, investigo y trato de almenos entenderlo a un nivel que me permita comunicarme con alguien con experiencia</p>
             </div>
             <div class="valores__elemento">
-              <h3 class="articulo__subtitulo-1 texto__dark">// Nombre valor</h3>
-              <p class="articulo__parrafo-1 texto__dark">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, aliquam fugiat, quam et atque ea suscipit, eaque distinctio eveniet ab aut pariatur sit tenetur quidem consectetur beatae. Porro, beatae nam?</p>
+              <h3 class="articulo__subtitulo-1 texto__dark">// Trabajar en equipo</h3>
+              <p class="articulo__parrafo-1 texto__dark">Por mi disciplina, estoy acostumbrado a trabajar con profesionales de distintas areas, lo cual tambien me permite obtener conocimientos y aprender a ver las cosas desde su punto de vista</p>
             </div>
             <div class="valores__elemento">
-              <h3 class="articulo__subtitulo-1 texto__dark">// Nombre valor</h3>
-              <p class="articulo__parrafo-1 texto__dark">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, aliquam fugiat, quam et atque ea suscipit, eaque distinctio eveniet ab aut pariatur sit tenetur quidem consectetur beatae. Porro, beatae nam?</p>
+              <h3 class="articulo__subtitulo-1 texto__dark">// Perfeccionista</h3>
+              <p class="articulo__parrafo-1 texto__dark">Me gusta completar cada proyecto que me propongo de modo que este conforme con el resultado, siempre busco la forma de mejorar cada detalle de mis proyectos hasta que estos lleguen a un nivel con el que este conforme</p>
             </div>
           </div>
         </div>
@@ -120,7 +119,7 @@
     </section>
 
     <!--Testimonio Testimonio Testimonio Testimonio Testimonio Testimonio Testimonio Testimonio -->
-    <section class="testimonio">
+    <!--<section class="testimonio">
       <div class="container">
         <div class="row">
           <h2 class="col-12 articulo__titulo testimonio__titulo">Testimonio</h1>
@@ -132,7 +131,7 @@
           <p class="col-12 articulo__parrafo-1 articulo__firma">laboriosam repellat voluptate!</p>
         </div>
       </div>
-    </section>
+    </section>-->
 
 </body>
 </html>
