--- a/ilustracion.html
+++ b/ilustracion.html
@@ -58,10 +58,10 @@
 
 <ul class="navegacion__contacto">
   <li class="navegacion__contacto-elemento">
-    <a class="navegacion__contacto-link" href="">Mail</a>
+    <a class="navegacion__contacto-link" href="mailto: info@thomasheimdesign.com">Mail</a>
   </li>
   <li class="navegacion__contacto-elemento">
-    <a class="navegacion__contacto-link" href="">LinkedIn</a>
+    <a class="navegacion__contacto-link" href="https://www.linkedin.com/in/thomasheimrojas/" target="_blank">LinkedIn</a>
   </li>
 </ul>
 
