--- a/index.html
+++ b/index.html
@@ -81,16 +81,13 @@
   <main id="trabajos" class="trabajos">
     <div class="container-fluid trabajos__container panel">
       <div class="row">
-        <button id="ux__first" class="trabajos__boton boton__custom-trabajos"><a href="">Proyecto 1</a></button> 
+        <button id="ux__first" class="trabajos__boton boton__custom-trabajos"><a href="">La Vega Chica</a></button> 
       </div>
-      <div class="row">
-        <button id="ux__second" class="trabajos__boton boton__custom-trabajos"><a href="">Proyecto 2</a></button> 
+      <div class="row d-xl-none">
+        <button id="ux__second" class="trabajos__boton boton__custom-trabajos"><a href="">Alvea</a></button> 
       </div>
-      <div class="row">
-        <button id="ux__third" class="trabajos__boton boton__custom-trabajos bg__boton"><a href="">Proyecto 3</a></button> 
-      </div>
-      <div class="row">
-        <button id="ux__fourth" class="trabajos__boton boton__custom-trabajos bg__boton"><a href="">Proyecto 4</a></button> 
+      <div class="row d-none d-xl-block">
+        <button id="ux__second-desktop" class="trabajos__boton boton__custom-trabajos"><a href="">Alvea: La leyenda de los soplavientos</a></button> 
       </div>
     </div>
   </main>   
