--- a/template__articulo.html
+++ b/template__articulo.html
@@ -78,27 +78,33 @@
       </div>
     </header>
     <section id="panel__fijo-info" class="panel__fijo panel articulo__info">
-        <div class="row no-gutters align-items-end justify-content-between articulo__info-row">
-          <div class="col-1 articulo__info-datos">
-            <div class="articulo__info-datosContenedor">
-              <div class="articulo__info-datosTitulos">
-                <h4 class="hero__subtitulo-2 texto__dark">Cliente</h4>
-                <h4 class="hero__subtitulo-2 texto__dark">Rol</h4>
-                <h4 class="hero__subtitulo-2 texto__dark">Duración</h4>
+      <div class="row no-gutters align-items-end justify-content-between articulo__info-row">
+        <div class="col-2 articulo__info-datos">
+          <div class="articulo__info-datosContenedor">
+              <div class="articulo__info-datosCampo">
+                  <h4 class="hero__subtitulo-2 texto__dark">Cliente</h4>
+                  <h4 class="hero__subtitulo-2 texto__dark">Nombre cliente</h4>
               </div>
-              <div class="articulo__info-datosRespuestas">
-                <h4 class="hero__subtitulo-2 texto__dark">Cliente</h4>
-                <h4 class="hero__subtitulo-2 texto__dark">Rol</h4>
-                <h4 class="hero__subtitulo-2 texto__dark">Duración</h4>
+              <div class="articulo__info-datosCampo">
+                  <h4 class="hero__subtitulo-2 texto__dark">Rol</h4>
+                  <div class="articulo__info-respuestasCampo">
+                      <h4 class="hero__subtitulo-2 texto__dark">Nombre cliente</h4>
+                      <h4 class="hero__subtitulo-2 texto__dark">Nombre cliente</h4>
+                      <h4 class="hero__subtitulo-2 texto__dark">Nombre cliente</h4>
+                  </div>
               </div>
-            </div>
-          </div>
-          <div class="d-none d-lg-block col-lg-4 articulo__info-contexto">
-            <h3 class="articulo__info-titulo hero__subtitulo-1 texto__dark">Contexto</h3> <!--Se puede cambiar "contexto" por otro titulo que haga mas sentido-->
-            <p class="articulo__info-parrafo articulo__parrafo-1 texto__dark">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium quod nesciunt animi reprehenderit ad officia, sed soluta culpa assumenda doloremque minus in laboriosam quisquam illum quam ratione nobis eveniet? Consequuntur! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores voluptatibus recusandae laborum est saepe fuga a harum quo eos laudantium commodi illum distinctio praesentium ipsa, deleniti voluptates incidunt, quasi accusantium! Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, doloremque. Laboriosam et ea, maxime a natus, amet error placeat quas similique nobis reprehenderit magnam soluta, perferendis obcaecati dolores harum fugit? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum aliquid quasi facere aspernatur quas eum, iusto ex natus exercitationem recusandae, laudantium officiis, voluptates inventore illum. Temporibus alias non ad quos.</p>
+              <div class="articulo__info-datosCampo">
+                  <h4 class="hero__subtitulo-2 texto__dark">Año</h4>
+                  <h4 class="hero__subtitulo-2 texto__dark">Nombre cliente</h4>
+              </div>
           </div>
         </div>
-    </section>
+        <div class="d-none d-lg-block col-lg-4 articulo__info-contexto">
+          <h3 class="articulo__info-titulo hero__subtitulo-1 texto__dark">Contexto</h3> <!--Se puede cambiar "contexto" por otro titulo que haga mas sentido-->
+          <p class="articulo__info-parrafo articulo__parrafo-1 texto__dark">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium quod nesciunt animi reprehenderit ad officia, sed soluta culpa assumenda doloremque minus in laboriosam quisquam illum quam ratione nobis eveniet? Consequuntur! Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores voluptatibus recusandae laborum est saepe fuga a harum quo eos laudantium commodi illum distinctio praesentium ipsa, deleniti voluptates incidunt, quasi accusantium! Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, doloremque. Laboriosam et ea, maxime a natus, amet error placeat quas similique nobis reprehenderit magnam soluta, perferendis obcaecati dolores harum fugit? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum aliquid quasi facere aspernatur quas eum, iusto ex natus exercitationem recusandae, laudantium officiis, voluptates inventore illum. Temporibus alias non ad quos.</p>
+        </div>
+      </div>
+  </section>
     <section id="panel__contextoMovil" class="panel d-block d-lg-none articulo__info2">
       <div class="container-fluid">
         <div class="composicion1__barraMenu fondo__dark"></div>
