--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, minimum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!--Fuentes-->
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:wght@400;600&display=swap" rel="stylesheet"> 
@@ -84,10 +84,10 @@
         <button id="ux__first" class="trabajos__boton boton__custom-trabajos"><a href="">La Vega Chica</a></button> 
       </div>
       <div class="row d-xl-none">
-        <button id="ux__second" class="trabajos__boton boton__custom-trabajos"><a href="">Alvea</a></button> 
+        <button id="ux__second" class="trabajos__boton boton__custom-trabajos"><a href="alveaux.html">Alvea</a></button> 
       </div>
       <div class="row d-none d-xl-block">
-        <button id="ux__second-desktop" class="trabajos__boton boton__custom-trabajos"><a href="">Alvea: La leyenda de los soplavientos</a></button> 
+        <button id="ux__second-desktop" class="trabajos__boton boton__custom-trabajos"><a href="alveaux.html">Alvea: La leyenda de los soplavientos</a></button> 
       </div>
     </div>
   </main>   
