--- a/sobre-mi.html
+++ b/sobre-mi.html
@@ -71,11 +71,11 @@
           <h1 class="col-md-4 col-lg-12 hero__texto-1 texto__dark">Un poco sobre mi</h1>
         </div>
         <div class="row">
-          <p class="col-md-5 hero__parrafo-1 texto__dark">Mi nombre es thomas heim, soy un diseñador e ilustrador de la universidad de valparaíso viviendo en viña del mar. Soy una persona a la que le gusta explorar y aprender nuevas tecnicas y habilidades, una flexibilidad que solo pude obtener en la disciplina del diseño.<br><br>Desde pequeño, siempre he tenido interés en la ilustración y en la expresión de mi creatividad, sin embargo el estudiar diseño me ayudó a enfocar y controlar esa creatividad hacia la creación de soluciones y a la expresión de mensajes y experiencias visuales.</p>
+          <p class="col-md-5 hero__parrafo-1 d-md-none d-lg-block texto__dark">Mi nombre es thomas heim, soy un diseñador e ilustrador de la universidad de valparaíso viviendo en viña del mar. Soy una persona a la que le gusta explorar y aprender nuevas tecnicas y habilidades, una flexibilidad que solo pude obtener en la disciplina del diseño.<br><br>Desde pequeño, siempre he tenido interés en la ilustración y en la expresión de mi creatividad, sin embargo el estudiar diseño me ayudó a enfocar y controlar esa creatividad hacia la creación de soluciones y a la expresión de mensajes y experiencias visuales.</p>
         </div>
         <div class="row">
           <!--ACUERDATE DE PONER TU PORTAFOLIO DE VERDAD ACA CUANDO LO TERMINES-->
-          <div class="col-1 sobremi__boton">
+          <div class="col-1 sobremi__boton mb-5 ">
             <button class="boton__custom"><a href="assets/Curriculum Thomas Heim 2020.pdf#page=1" target="_blank">Descarga mi CV</a></button>
           </div>
         </div>
