Articulo La Vega Chica Terminado

--- a/alveaux.html
+++ b/alveaux.html
@@ -18,7 +18,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous" defer></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous" defer></script>
     <!--js js js js js js js--> 
-    <title>Thomas Heim | Alvea: La leyenda de los soplavientos</title>
+    <title>Thomas Heim | Diseño UX | Alvea: La leyenda de los soplavientos</title>
 </head>
 <body class="body__articulo-dark">
   <!--Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav Nav -->
@@ -33,7 +33,7 @@
             <a class="nav-link navegacion__contenido-link" href="sobre-mi.html">Quien soy <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item d-lg-none">
-            <a class="nav-link navegacion__contenido-link" href="#">Diseño UX<span class="sr-only">(current)</span></a>
+            <a class="nav-link navegacion__contenido-link" href="index.html#trabajos">Diseño UX/UI<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item d-lg-none">
             <a class="nav-link navegacion__contenido-link" href="diseno-grafico.html">Diseño gráfico<span class="sr-only">(current)</span></a>
@@ -46,8 +46,7 @@
               Mis trabajos
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#disenoux">Diseño UX</a>
-              <a class="dropdown-item" href="#">Diseño UI</a>
+              <a class="dropdown-item" href="index.html#trabajos">Diseño UX/UI</a>
               <a class="dropdown-item" href="diseno-grafico.html">Diseño gráfico</a>
               <a class="dropdown-item" href="ilustracion.html">Ilustración</a>
             </div>
