--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   <main id="trabajos" class="trabajos">
     <div class="container-fluid trabajos__container panel">
       <div class="row">
-        <button id="ux__first" class="trabajos__boton boton__custom-trabajos"><a href="">La Vega Chica</a></button> 
+        <button id="ux__first" class="trabajos__boton boton__custom-trabajos"><a href="LaVegaChica.html">La Vega Chica</a></button> 
       </div>
       <div class="row d-xl-none">
         <button id="ux__second" class="trabajos__boton boton__custom-trabajos"><a href="alveaux.html">Alvea</a></button> 
